[gd_scene load_steps=35 format=3 uid="uid://be1gk8hiqhyho"]

[ext_resource type="Script" uid="uid://bqr6bmvlg7hda" path="res://Scenes/Player/Player.gd" id="1_ft8w5"]
[ext_resource type="Texture2D" uid="uid://uytwdji3pa3b" path="res://assets/player/player.png" id="1_s0eop"]
[ext_resource type="PackedScene" uid="uid://boiqha8vg5p7o" path="res://Scenes/PlayerCam/PlayerCam.tscn" id="3_h54ih"]
[ext_resource type="PackedScene" uid="uid://bxs3sovt53hl6" path="res://Scenes/Shooter/Shooter.tscn" id="4_ude3g"]
[ext_resource type="AudioStream" uid="uid://bbhl8e2r042h3" path="res://assets/sound/jump.wav" id="5_jmcll"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s0eop"]
radius = 5.0
height = 20.0

[sub_resource type="Animation" id="Animation_ude3g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_t26db"]
resource_name = "fall"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_fk5o5"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_h54ih"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_4wape"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_jmcll"]
resource_name = "run"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jmcll"]
_data = {
&"RESET": SubResource("Animation_ude3g"),
&"fall": SubResource("Animation_t26db"),
&"hurt": SubResource("Animation_fk5o5"),
&"idle": SubResource("Animation_h54ih"),
&"jump": SubResource("Animation_4wape"),
&"run": SubResource("Animation_jmcll")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h54ih"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ude3g"]
animation = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jmcll"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4wape"]
advance_mode = 2
advance_expression = "velocity.y > 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_825xp"]
advance_mode = 2
advance_expression = "velocity.y <= 0"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ji083"]
states/fall/node = SubResource("AnimationNodeAnimation_h54ih")
states/fall/position = Vector2(557, 105)
states/jump/node = SubResource("AnimationNodeAnimation_ude3g")
states/jump/position = Vector2(336.5, 97)
transitions = ["Start", "jump", SubResource("AnimationNodeStateMachineTransition_jmcll"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_4wape"), "fall", "jump", SubResource("AnimationNodeStateMachineTransition_825xp")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jmcll"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4wape"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t26db"]
advance_mode = 2
advance_expression = "int(velocity.x) != 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fk5o5"]
advance_mode = 2
advance_expression = "int(velocity.x) == 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h54ih"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_825xp"]
states/Start/position = Vector2(200, 79.25)
states/idle/node = SubResource("AnimationNodeAnimation_jmcll")
states/idle/position = Vector2(358.5, 79)
states/run/node = SubResource("AnimationNodeAnimation_4wape")
states/run/position = Vector2(490.5, 80.5)
transitions = ["idle", "run", SubResource("AnimationNodeStateMachineTransition_t26db"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_fk5o5"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_h54ih")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t26db"]
animation = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ude3g"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ji083"]
advance_mode = 2
advance_expression = "!is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0kmp4"]
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i5acl"]
advance_mode = 2
advance_expression = "_is_hurt == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_epg6k"]
advance_mode = 2
advance_expression = "_is_hurt == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0u84n"]
advance_mode = 2
advance_expression = "_is_hurt == false"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_t26db"]
states/Air/node = SubResource("AnimationNodeStateMachine_ji083")
states/Air/position = Vector2(648.4, 99.84)
states/Grounded/node = SubResource("AnimationNodeStateMachine_825xp")
states/Grounded/position = Vector2(427, 100.75)
states/Start/position = Vector2(201.6, 98.1974)
states/hurt/node = SubResource("AnimationNodeAnimation_t26db")
states/hurt/position = Vector2(461, 220.6)
transitions = ["Start", "Grounded", SubResource("AnimationNodeStateMachineTransition_ude3g"), "Grounded", "Air", SubResource("AnimationNodeStateMachineTransition_ji083"), "Air", "Grounded", SubResource("AnimationNodeStateMachineTransition_0kmp4"), "Grounded", "hurt", SubResource("AnimationNodeStateMachineTransition_i5acl"), "Air", "hurt", SubResource("AnimationNodeStateMachineTransition_epg6k"), "hurt", "Grounded", SubResource("AnimationNodeStateMachineTransition_0u84n")]
graph_offset = Vector2(45, 29)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h54ih"]
radius = 6.0
height = 18.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_ft8w5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_s0eop")
hframes = 19
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_s0eop")

[node name="PlayerCam" parent="." instance=ExtResource("3_h54ih")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jmcll")
}
autoplay = "idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_t26db")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -16.0
offset_top = -60.0
offset_right = 258.0
offset_bottom = 342.0
scale = Vector2(0.11845791, 0.11845791)
theme_override_font_sizes/font_size = 96
text = "0000
00000
00000"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_h54ih")

[node name="Shooter" parent="." instance=ExtResource("4_ude3g")]
speed = 250.0
shoot_delay = 1.0

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jmcll")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
